# LLMNewsRAG

./: README.md  pyproject.toml  requirements.txt
data/: article1.txt
src/: __init__.py  _db.py  agent.py  config.py  embeddings.py  extraction.py  extractor.py  ingest.py  models.py  orchestrator.py  pipeline.py  retriever.py  tools.py  validation.py  validator.py
src/prompts/: __init__.py  extraction_prompt.py
src/rag/: __init__.py  retriever.py
tests/: __init__.py
tests/test_esg_agent/: __init__.py  test_extraction.py  test_models.py  test_rag.py  test_tools.py  test_validation.py
