[project]
name = "esg-agent"
description = "LLM Agent with RAG + Tools for ESG sustainability report analysis"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
authors = [
    {name = "Clarity AI", email = "ds-innovation@clarity.ai"},
]
dependencies = [
    "loguru>=0.7.2,<0.8.0",
    "pydantic>=2.5.2,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-google-genai>=4.2.0,<5.0.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "openai>=1.0.0,<2.0.0",
    "deepagents>=0.4.0,<0.5.0",
    "openai>=1.0.0,<2.0.0",
    "tavily>=1.1.0,<2.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "numpy>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/esg_agent"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.uv]
default-groups = "all"
